# assistant-rag-documentaire

./: .gitignore  main.py  pyproject.toml  requirements.txt
app/: api.py  main.ipynb  pdf_loader.py  rag_pipeline.py  splitter.py  streamlit_app.py  text_cleaning.py
documents/: Cahier des charges.docx
noteboook/: main.ipynb
vectorstore/: index.pkl
