[project]
name = "assistant-rag-documentaire"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.5",
    "pymupdf>=1.28.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
]
