[project]
name = "assistant-rag-documentaire"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx>=0.2.4",
    "docx2txt>=0.9",
    "faiss-cpu>=1.14.3",
    "ipykernel>=7.3.0",
    "jq>=1.12.0",
    "langchain>=1.3.13",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.5",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.1.2",
    "libmagic>=1.0",
    "matplotlib>=3.11.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "spacy>=3.8.14",
    "umap-learn>=0.5.12",
    "unstructured[docx]>=0.24.1",
]
